--- a/Lab_Website/views/team_stats.html
+++ b/Lab_Website/views/team_stats.html
@@ -44,13 +44,18 @@
     </div>
 
     <table border="1">
+      <tr>
+      </tr>
     	<tr>
-    		<th>Game Date</th>
-        <th>Opposing Team</th>
-        <th>Home Score</th>
-        <th>Opp. Score</th>
-        <th>Winner</th>
+    		<th rowspan="2">Game Date</th>
+        <th rowspan="2">Opposing Team</th>
+        <th rowspan="1" colspan="2">Score</th>
+        <th rowspan="2">Winner</th>
     	</tr>
+      <tr>
+        <td> <b>Home Score</b> </td>
+        <td> <b>Opp. Score</b> </td>
+      </tr>
     	<tr>
     		<td>8/30/2019</td>
     		<td>Colorado State</td>
